hume-editor/src/editor/tests/unix/snapshots/hume_editor__editor__tests__unix__git_diff_plugin__inline_tab_indented_deletion_keeps_a_literal_tab_that_still_renders_at_the_right_display_column.snap
---
source: hume-editor/src/editor/tests/unix/git_diff_plugin.rs
expression: snap
---
<fg=#fb4934,bg=#3c3836>- </><fg=#fabd2f,bg=#3c3836>1 </><fg=#3c3836,bg=#bdae93>o</><fg=#ebdbb2,bg=#3c3836>ne</>
<fg=#665c54,bg=#4e2e2a>    </><fg=#ebdbb2,bg=#4e2e2a>    tabbed line</>
<fg=#665c54,bg=#282828>  1 </><fg=#ebdbb2,bg=#282828>three</>
<fg=#928374,bg=#282828>~</>
<fg=#928374,bg=#282828>~</>
<fg=#928374,bg=#282828>~</>
<fg=#928374,bg=#282828>~</>
<fg=#3c3836,bg=#bdae93,bold> Opened f.txt</>
